--- a/frontend/index.html
+++ b/frontend/index.html
@@ -391,16 +391,21 @@
                                     02:00 PM - Announcements</p>
                             </div>
 
-                            <div class="text-center pt-8 border-t border-slate-100">
-                                <p class="text-xs text-slate-400 uppercase tracking-widest font-bold mb-1">Organized by
-                                </p>
-                                <p id="prevOrganizer" class="text-xl font-black text-slate-800 font-outfit">Imena Family
+                            <div class="mt-12 pt-10 border-t border-slate-100 text-center">
+                                <p class="text-[10px] uppercase font-black tracking-widest text-slate-400 mb-2">
+                                    Organized by</p>
+                                <p id="prevOrganizer" class="text-2xl font-black text-slate-800 font-outfit">Imena
+                                    Family
                                 </p>
                             </div>
                         </div>
-                        <div class="bg-slate-50 p-6 text-center">
-                            <p class="text-[10px] text-slate-400 font-bold uppercase tracking-tighter italic">Ensemble,
-                                lumineux et courageux</p>
+
+                        <!-- Card Motto Footer -->
+                        <div class="bg-slate-50 p-8 text-center border-t border-slate-100">
+                            <p id="prevTagline"
+                                class="text-[11px] text-slate-400 font-bold uppercase tracking-[0.2em] italic">
+                                Ensemble, lumineux et courageux
+                            </p>
                         </div>
                     </div>
                 </div>
