--- a/frontend/index.html
+++ b/frontend/index.html
@@ -210,7 +210,7 @@
                             <div>
                                 <label class="block text-sm font-bold text-slate-700 mb-2">Event Title <span
                                         class="text-red-500">*</span></label>
-                                <input type="text" id="eventTitle" required placeholder="e.g. Saturday Family Lunch"
+                                <input type="text" id="eventTitle" required placeholder="e.g. Saturday Family Gathering"
                                     class="w-full px-4 py-3 rounded-xl border border-slate-200 focus:border-primary focus:ring-4 focus:ring-primary/10 outline-none transition-all">
                             </div>
 
@@ -231,13 +231,13 @@
 
                             <div>
                                 <label class="block text-sm font-bold text-slate-700 mb-2">Location</label>
-                                <input type="text" id="location" placeholder="e.g. Imena Family Home, Kigali"
+                                <input type="text" id="location" placeholder="e.g. TVET Class"
                                     class="w-full px-4 py-3 rounded-xl border border-slate-200 focus:border-primary focus:ring-4 focus:ring-primary/10 outline-none transition-all">
                             </div>
 
                             <div>
                                 <label class="block text-sm font-bold text-slate-700 mb-2">Organized By</label>
-                                <input type="text" id="organizer" placeholder="e.g. Imena Family"
+                                <input type="text" id="organizer" placeholder="e.g. Hope Family"
                                     class="w-full px-4 py-3 rounded-xl border border-slate-200 focus:border-primary focus:ring-4 focus:ring-primary/10 outline-none transition-all">
                             </div>
 
@@ -250,7 +250,7 @@
                             <div>
                                 <label class="block text-sm font-bold text-slate-700 mb-2">Agenda</label>
                                 <textarea id="agenda" rows="4"
-                                    placeholder="e.g.&#10;12:00 PM - Arrival&#10;01:00 PM - Lunch"
+                                    placeholder="e.g.&#10;12:00 PM - Arrival&#10;02:30 PM - Arrival"
                                     class="w-full px-4 py-3 rounded-xl border border-slate-200 focus:border-primary focus:ring-4 focus:ring-primary/10 outline-none transition-all resize-none"></textarea>
                             </div>
 
