--- a/frontend/index.html
+++ b/frontend/index.html
@@ -123,7 +123,7 @@
             <div class="container mx-auto px-6">
                 <span
                     class="px-4 py-1.5 bg-blue-50 text-primary rounded-full text-sm font-bold mb-6 inline-block">Standalone
-                    Offline Version</span>
+                    Invitation Generator</span>
                 <h1 class="text-4xl md:text-6xl font-black mb-6 leading-[1.1]">Beautiful Invitations <br><span
                         class="text-primary">Made Simple.</span></h1>
                 <p class="text-slate-500 text-lg max-w-2xl mx-auto mb-10">Generate professional, Imena-branded
