--- a/frontend/index.html
+++ b/frontend/index.html
@@ -404,7 +404,7 @@
                         <div class="bg-slate-50 p-8 text-center border-t border-slate-100">
                             <p id="prevTagline"
                                 class="text-[11px] text-slate-400 font-bold uppercase tracking-[0.2em] italic">
-                                Ensemble, lumineux et courageux
+                                Ensemble, lumineux et courageux ❤️‍🔥
                             </p>
                         </div>
                     </div>
